# AutonomousSystemPlatform

./: .gitignore  .gitmodules  AVL_FINAL.rviz  How To Play.txt  How To Play_FINAL.txt  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  git_checklist.txt  git_usage_guide.txt  marker_batch.csv  run_all_bridges.sh
PX4-Autopilot_ASP/Tools/simulation/gz/models/x500_gimbal/: model.sdf
ws_aruco/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_aruco/install/cv_bridge/include/cv_bridge/cv_bridge/: cv_bridge.h  cv_bridge_export.h  rgb_colors.h
ws_aruco/install/cv_bridge/share/cv_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_aruco/install/cv_bridge/share/cv_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  cv_bridge-extras.cmake  cv_bridgeConfig-version.cmake  cv_bridgeConfig.cmake
ws_aruco/install/cv_bridge/share/cv_bridge/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ws_aruco/install/image_geometry/include/image_geometry/image_geometry/: pinhole_camera_model.h  stereo_camera_model.h  visibility_control.hpp
ws_aruco/install/image_geometry/share/image_geometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_aruco/install/image_geometry/share/image_geometry/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  image_geometryConfig-version.cmake  image_geometryConfig.cmake
ws_aruco/install/image_geometry/share/image_geometry/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ws_aruco/install/multi_tracker/lib/multi_tracker/: multi_tracker_node
ws_aruco/install/multi_tracker/share/multi_tracker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_aruco/install/multi_tracker/share/multi_tracker/cmake/: multi_trackerConfig-version.cmake  multi_trackerConfig.cmake
ws_aruco/install/opencv_tests/lib/opencv_tests/: broadcast  rosfacedetect  source
ws_aruco/install/opencv_tests/share/opencv_tests/: package.sh  package.xml
ws_aruco/install/vision_opencv/share/vision_opencv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_aruco/log/: latest_build  latest_list
ws_aruco/src/multi_tracker/: CMakeLists.txt  package.xml
ws_aruco/src/multi_tracker/launch/: x500_aruco_detector.launch.py
ws_aruco/src/multi_tracker/src/: marker_logger_node.cpp  multi_tracker_node.cpp
ws_aruco/src/vision_opencv/opencv_tests/launch/: view_img.py
ws_gazebo/: asp_final_proj.rviz
ws_gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_gazebo/install/gazebo_env_setup/lib/gazebo_env_setup/: pose_tf_broadcaster
ws_gazebo/install/gazebo_env_setup/share/gazebo_env_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_gazebo/log/: latest_build
ws_gazebo/src/gazebo_env_setup/launch/: pose_tf_broadcaster.launch.py  simulation_interface.launch.py  topic_bridge.launch.py
ws_px4_control/: .gitignore  uav_wp.csv
ws_px4_control/install/: local_setup.sh  setup.bash  setup.sh
ws_px4_control/install/ofb_ctrl/lib/ofb_ctrl/: offboard_control_node  waypoint_offboard_node
ws_px4_control/install/ofb_ctrl/share/ofb_ctrl/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_px4_control/install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_px4_control/install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
ws_px4_control/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  gimbal_target_publisher  offboard_control  offboard_control_srv  offboard_waypoint  offboard_waypoint_map  offboard_waypoint_trigger  path_planner_node.py  publish_map_info.py  sensor_combined_listener  vehicle_gps_position_listener
ws_px4_control/install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  test1.csv  test2.csv
ws_px4_control/install/utilities_pkg/lib/utilities_pkg/: keyboard_control_node
ws_px4_control/install/utilities_pkg/share/utilities_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_px4_control/log/: latest_build  latest_list
ws_px4_control/src/ofb_ctrl/: package.xml  setup.cfg  setup.py
ws_px4_control/src/ofb_ctrl/ofb_ctrl/: offboard_control.py  waypoint_offboard_node.py
ws_px4_control/src/px4_ros_com/: CMakeLists.txt  package.xml  test1.csv  test2.csv
ws_px4_control/src/px4_ros_com/data/: aruco_markers.csv  offboard_waypoints.csv
ws_px4_control/src/px4_ros_com/launch/: global_navigation.launch.py  offboard_control.launch.py
ws_px4_control/src/px4_ros_com/src/examples/map_visualization/: publish_map_info.py
ws_px4_control/src/px4_ros_com/src/examples/offboard/: gimbal_target_publisher.cpp  offboard_control.cpp  offboard_waypoint.txt  offboard_waypoint_map.cpp  offboard_waypoint_map_landing.cpp  offboard_waypoint_map_speed.cpp  offboard_waypoint_trigger.cpp  path_planner_node.py
ws_px4_control/src/px4_ros_com/src/examples/offboard_py/: offboard_control.py  offboard_control_path.py  path_planner_node.py
ws_ugv_control/install/: local_setup.sh  setup.sh
ws_ugv_control/install/ugv_controller/lib/ugv_controller/: course_csv_creator.py  path_follower_node  path_follower_node.py
ws_ugv_control/install/ugv_controller/share/ugv_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_ugv_control/log/: latest_build
ws_ugv_control/src/: ugv_controller.tar.xz
ws_ugv_control/src/ugv_controller/: CMakeLists.txt
ws_ugv_control/src/ugv_controller/data/: ugv_waypoint.csv
ws_ugv_control/src/ugv_controller/src/: path_follower_node.cpp
(+4050 files in other folders)
