<?xml version="1.0"?>
<package format="3">
  <name>px4_ros_com</name>
  <version>0.1.0</version>
  <description>Interface between PX4 and ROS 2</description>

  <maintainer email="beniamino.pozzan@gmail.com">Beniamino Pozzan</maintainer>
  <license>BSD-3-Clause</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <!-- core deps -->
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>              <!-- ★ 추가 -->
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>                <!-- rosdep key -->
  <depend>visualization_msgs</depend>
  <exec_depend>libopencv-dev</exec_depend>
  

  <!-- launch/tests -->
  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <build_export_depend>eigen</build_export_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
